log/build_2025-09-28_16-45-02/ros2_zhongli_bridge_cpp/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.14 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.8 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found geometry_msgs: 4.9.0 (/opt/ros/humble/share/geometry_msgs/cmake)
-- Found nav_msgs: 4.9.0 (/opt/ros/humble/share/nav_msgs/cmake)
-- Found nav2_msgs: 1.1.18 (/opt/ros/humble/share/nav2_msgs/cmake)
-- Found tf2_ros: 0.25.16 (/opt/ros/humble/share/tf2_ros/cmake)
-- Found tf2_geometry_msgs: 0.25.16 (/opt/ros/humble/share/tf2_geometry_msgs/cmake)
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/humble/share/eigen3_cmake_module/cmake)
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
-- Found mosquitto via pkg-config: mosquitto
-- Found mosquitto headers: 
-- Found ament_lint_auto: 0.12.14 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Found ament_cmake_gtest: 1.3.12 (/opt/ros/humble/share/ament_cmake_gtest/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/yhg/Documents/docs/zhongli/cpp_version/build/ros2_zhongli_bridge_cpp
Consolidate compiler generated dependencies of target zhongli_protocol_types
[ 18%] Built target zhongli_protocol_types
Consolidate compiler generated dependencies of target zhongli_mqtt_client
[ 36%] Built target zhongli_mqtt_client
Consolidate compiler generated dependencies of target ros2_zhongli_bridge
[ 45%] Building CXX object src/lib/CMakeFiles/ros2_zhongli_bridge.dir/path_converter.cpp.o
[ 54%] Building CXX object src/lib/CMakeFiles/ros2_zhongli_bridge.dir/ros2_zhongli_bridge.cpp.o
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/include/ros2_zhongli_bridge.hpp:3,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:1:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp: In member function ‘bool zhongli_bridge::ROS2ZhongliBridge::initialize()’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:30:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   30 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:42:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   42 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
[ 63%] Linking CXX shared library libros2_zhongli_bridge.so
[ 63%] Built target ros2_zhongli_bridge
Consolidate compiler generated dependencies of target test_real_plan_subscription
Consolidate compiler generated dependencies of target zhongli_bridge_node
[ 72%] Building CXX object src/tests/CMakeFiles/test_real_plan_subscription.dir/test_real_plan_subscription.cpp.o
[ 81%] Building CXX object CMakeFiles/zhongli_bridge_node.dir/src/main.cpp.o
In file included from /usr/include/c++/11/memory:76,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:153,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = zhongli_bridge::PathConverter; _Args = {std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, double, double}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<zhongli_bridge::PathConverter>]’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:23:58:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: no matching function for call to ‘zhongli_bridge::PathConverter::PathConverter(std::__cxx11::basic_string<char>&, double, double)’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/yhg/Documents/docs/zhongli/cpp_version/src/tests/test_real_plan_subscription.cpp:4:
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:27:5: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(const string&, double)’
   27 |     PathConverter(const std::string& robot_id,
      |     ^~~~~~~~~~~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:27:5: note:   candidate expects 2 arguments, 3 provided
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(const zhongli_bridge::PathConverter&)’
   19 | class PathConverter {
      |       ^~~~~~~~~~~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note:   candidate expects 1 argument, 3 provided
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note: candidate: ‘zhongli_bridge::PathConverter::PathConverter(zhongli_bridge::PathConverter&&)’
/home/yhg/Documents/docs/zhongli/cpp_version/src/include/path_converter.hpp:19:7: note:   candidate expects 1 argument, 3 provided
[ 90%] Linking CXX executable zhongli_bridge_node
[ 90%] Built target zhongli_bridge_node
gmake[2]: *** [src/tests/CMakeFiles/test_real_plan_subscription.dir/build.make:76: src/tests/CMakeFiles/test_real_plan_subscription.dir/test_real_plan_subscription.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:285: src/tests/CMakeFiles/test_real_plan_subscription.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
